# clf_navigation_plugins

./: README.md
clf_global_planner/: CMakeLists.txt  bgp_plugin.xml  package.xml
clf_local_planner/: CHANGELOG.rst  CMakeLists.txt  blp_plugin.xml  package.xml
clf_local_planner/cfg/: ClfLocalPlanner.cfg
clf_local_planner/include/clf_local_planner/: costmap_model.h  footprint_helper.h  goal_functions.h  latched_stop_rotate_controller.h  line_iterator.h  local_planner_limits.h  local_planner_util.h  map_cell.h  map_grid.h  map_grid_cost_function.h  map_grid_visualizer.h  obstacle_cost_function.h  odometry_helper_ros.h  oscillation_cost_function.h  planar_laser_scan.h  point_grid.h  prefer_forward_cost_function.h  (+12 more)
clf_local_planner/src/: costmap_model.cpp  footprint_helper.cpp  goal_functions.cpp  latched_stop_rotate_controller.cpp  local_planner_util.cpp  map_cell.cpp  map_grid.cpp  map_grid_cost_function.cpp  map_grid_visualizer.cpp  obstacle_cost_function.cpp  odometry_helper_ros.cpp  oscillation_cost_function.cpp  point_grid.cpp  prefer_forward_cost_function.cpp  simple_scored_sampling_planner.cpp  simple_trajectory_generator.cpp  trajectory.cpp  trajectory_planner.cpp  trajectory_planner_ros.cpp  twirling_cost_function.cpp  voxel_grid_model.cpp
clf_local_planner/test/: footprint_helper_test.cpp  line_iterator_test.cpp  map_grid_test.cpp  trajectory_generator_test.cpp  utest.cpp  velocity_iterator_test.cpp  wavefront_map_accessor.h
current_obstacle_layer/: CMakeLists.txt  col_plugin.xml  package.xml
current_obstacle_layer/cfg/: CurrentObstaclePlugin.cfg
current_obstacle_layer/include/current_obstacle_layer/: current_obstacle_layer.h
current_obstacle_layer/src/: current_obstacle_layer.cpp
